# wordly

./: README.md  wordly.cabal
app/: Main.hs
src/: Console.hs  Game.hs
