cabal-version:      2.4
name:               wordly
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josh
maintainer:         josh@critical.codes

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Console
        Game
    hs-source-dirs:
        src               
    build-depends:
        base ^>=4.16.4.0
        , ansi-terminal
    default-language: Haskell2010

executable wordly
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0
        , mtl
        , transformers
        , random
        , wordly
    hs-source-dirs:   app
    default-language: Haskell2010
